    - configs directory missing from 1.4.1 release, added back in (Monte)
    - added windows include_path setup instructions to FAQ & QUICKSTART
      (Monte)

Version 1.4.1
-------------
    - fix LOCK_EX logic for all windows platforms (Monte)
    - fixed indexing by section properties with the new syntax. (Andrei)
    - updated Smarty to use absolute paths when requiring/including Smarty
      components. (Andrei, John Lim)

Version 1.4.0
-------------
    - added {capture}{/capture} function, documented (Monte)
    - added {counter} function, documented (Monte) 

Version 1.4.0b2
---------------
    - fixed issue in Config_File.class with referencing blank sections (Andrei)
    - fixed problem with passing variables to included files (Andrei)
    - fixed resource path recognition for windows (Monte)

Version 1.4.0b1
---------------
    - added "componentized templates" tip into documentation (Monte)
    - added {php}{/php} tags for embedding php code into templates (Monte)
    - changed default value of $show_info_header to false (Monte)
    - implemented '->' syntax for accessing properties of objects passed to the
      template. (Andrei)
    - allowed custom functions to receive Smarty object as the second
      parameter; this can be used to dynamically change template variables, for
      example. (Andrei)
    - added custom compiler functions support, register_compiler_function() and
      unregister_compiler_function() API functions. (Andrei, Ivo Jansch).
    - updated GLOBAL_ASSIGN to take SCRIPT_NAME from HTTP_SERVER_VARS
      instead of global variable. You can also assign several variables
      in one shot with an array. (Monte, Roman Neuhauser)
    - added template prefilters, register_prefilter() and
      unregister_prefilter() API functions. (Monte)
    - added RELEASE_NOTES file to distribution. (Monte)
    - moved CREDITS out of manual into its own file. (Monte)
    - added register_resource() and unregister_resource() API functions. (Monte)